Reroute two-node loop crash #44064

Closed
opened 2015-03-20 16:01:25 +01:00 by Damien Picard · 8 comments
Member

System Information
Windows 7 64bits
Nvidia Titan Black

Blender Version
Broken: 2.73a

Short description of error
Blender crashes in shading node editor, when creating a link between two already-linked reroute nodes, when a viewport is in Rendered view

Exact steps for others to reproduce the error
Using factory settings:

  • Set render engine to Cycles
  • Select default cube
  • "Use Nodes" on cube's material
  • Open a Shading Node editor
  • Set 3D View to Rendered mode
  • Create two Reroute nodes between Diffuse BSDF and Material Output using SHIFT + drag
    • The data flows left to right
  • Create a connexion between reroutes from right to left
  • Blender crashes
**System Information** Windows 7 64bits Nvidia Titan Black **Blender Version** Broken: 2.73a **Short description of error** Blender crashes in shading node editor, when creating a link between two already-linked reroute nodes, when a viewport is in Rendered view **Exact steps for others to reproduce the error** Using factory settings: - Set render engine to Cycles - Select default cube - "Use Nodes" on cube's material - Open a Shading Node editor - Set 3D View to Rendered mode - Create two Reroute nodes between Diffuse BSDF and Material Output using SHIFT + drag - *The data flows left to right* - Create a connexion between reroutes from right to left - Blender crashes
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Confirmed here on Linux with latest head.

This assert is failing: https://developer.blender.org/diffusion/B/browse/master/intern/cycles/render/graph.cpp$222

Here's some backtrace: http://hastebin.com/yuvisagiqo.pas

Confirmed here on Linux with latest head. This assert is failing: https://developer.blender.org/diffusion/B/browse/master/intern/cycles/render/graph.cpp$222 Here's some backtrace: http://hastebin.com/yuvisagiqo.pas
Sergey Sharybin self-assigned this 2015-03-24 09:11:37 +01:00

This issue was referenced by 8d0b104f43

This issue was referenced by 8d0b104f4357f5914f3e28d735ebffa1526a598e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8d0b104f43.

Closed by commit 8d0b104f43.

This issue was referenced by blender/cycles@26f8670c58

This issue was referenced by blender/cycles@26f8670c58ac854ed853c3a484c85806fb36c77a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44064
No description provided.